syntax = "proto3";

import "scalapb/scalapb.proto";

package toguru.toggles;

message Metadata {
    int64  time = 1;
    string username = 2;
}

message ToggleCreated {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    string name = 1;
    string description = 2;
    map<string, string> tags = 3;
    Metadata meta = 4;
}

message ToggleUpdated {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    string name = 1;
    string description = 2;
    map<string, string> tags = 3;
    Metadata meta = 4;
}

message ToggleDeleted {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    Metadata meta = 4;
}

message GlobalRolloutCreated {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    int32 percentage = 1;
    Metadata meta = 2;
}

message GlobalRolloutUpdated {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    int32 percentage = 1;
    Metadata meta = 2;
}

message GlobalRolloutDeleted {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    Metadata meta = 1;
}

message ActivationCreated {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    int32 percentage = 1;
    map<string, CustomAttributeValue> attributes = 2;
    Metadata meta = 3;
}

message ActivationUpdated {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    int32 percentage = 1;
    map<string, CustomAttributeValue> attributes = 2;
    Metadata meta = 3;
}

message CustomAttributeValue {
    repeated string values = 1;
}

message ActivationDeleted {
    option (scalapb.message).extends = "toguru.toggles.ToggleEvent";
    Metadata meta = 1;
}
